# JSync

./: .gitignore  JEBSync.py  LICENSE  MODULE.bazel  Makefile  README.md  pack_client.sh  pack_server.sh
.github/workflows/: pack.yaml  publish.yaml
client/: jebsync.py  jebsync_headers.py  rename_engine.py  rename_listener.py  sync_to_server.py  update_listener.py  utils.py
client_base/: client_symbol_store.py  config.py  connection.py  rename_engine.py  rename_listener.py  rename_store.py  scan_updated_symbols.py  server_query.py  sql_queries.py  sync_to_server.py  update_listener.py
common/: commands.py  connection.py  consts.py  dataclass.py  lazy_dict.py  sql_queries.py  sqlite_adapter.py  symbol.py  symbol_store.py
jadx/: .gitignore  BUILD  build.gradle.kts  settings.gradle.kts
jadx/src/main/kotlin/com/ykaridi/jsync/: Util.kt  (+1 more)
jadx/src/main/python/: client_base  java_common  jsync_cache.py
jadx/src/main/python/jsync_jadx/: config.py  connection.py  plugin.py  rename_engine.py  rename_listener.py  scan_updated_symbols.py  sync_to_server.py  utils.py
java_common/: connection.py  java_connection.py  jdbc_symbol_store.py  rename_engine.py  scan_updated_symbols.py  sqlite_adapter.py  sync_to_server.py  update_listener.py  wrappers.py
jeb/: JSync.py  config.py  connection.py  rename_engine.py  rename_listener.py  scan_updated_symbols.py  sync_to_server.py  utils.py
server/: __main__.py  default_symbol_server.py  pysqlite_symbol_store.py  sqlite_symbol_store.py  symbol_server.py  symbol_store.py  utils.py
typings/: generate_stubs.py  requirements.txt
