# Kotlin
bazel_dep(name = "rules_kotlin", version = "1.9.6")

# Maven
bazel_dep(name = "rules_jvm_external", version = "6.2")
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
            "io.github.skylot:jadx-core:1.5.0",
            "org.python:jython-standalone:2.7.3b1",
            "org.slf4j:slf4j-api:1.7.30",
            "org.slf4j:slf4j-simple:1.7.30"
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://maven.google.com",
    ],
)

use_repo(maven, "maven")